--- a/index.html
+++ b/index.html
@@ -10,64 +10,71 @@
 
   <body>
     <div class="crud">
-      <div class="head">
-        <h2>crud</h2>
-        <p>product management system</p>
-      </div>
-
-      <div class="inputs">
-        <input placeholder="title" type="text" name="" id="title" />
-        <div class="price">
-          <input
-            onkeyup="getPrice()"
-            placeholder="Price"
-            type="number"
-            name=""
-            id="price"
-          />
-          <input
-            onkeyup="getPrice()"
-            placeholder="Taxes"
-            type="number"
-            name=""
-            id="taxes"
-          />
-          <input
-            onkeyup="getPrice()"
-            placeholder="Ads"
-            type="number"
-            name=""
-            id="ads"
-          />
-          <input
-            onkeyup="getPrice()"
-            placeholder="Discount"
-            type="number"
-            name=""
-            id="discount"
-          />
-          <small id="total"></small>
+      <div class="inner-div">
+        <div class="head">
+          <h2>crud</h2>
+          <p>product management system</p>
         </div>
-        <input placeholder="Count" type="number" name="" id="count" />
-        <input placeholder="Category" type="text" name="" id="category" />
-        <button id="submit">Create</button>
-      </div>
 
-      <div class="outputs">
-        <div class="searchBlock">
-          <input onkeyup="searchData(value)" type="text" id="search" placeholder="Search" />
-          <div class="btnSearch">
-            <button onclick="searchPro(this.id)" id="searchTitle">
-              Search By Title
-            </button>
-            <button onclick="searchPro(this.id)" id="searchCategory">
-              Search By Category
-            </button>
+        <div class="inputs">
+          <input placeholder="title" type="text" name="" id="title" />
+          <div class="price">
+            <input
+              onkeyup="getPrice()"
+              placeholder="Price"
+              type="number"
+              name=""
+              id="price"
+            />
+            <input
+              onkeyup="getPrice()"
+              placeholder="Taxes"
+              type="number"
+              name=""
+              id="taxes"
+            />
+            <input
+              onkeyup="getPrice()"
+              placeholder="Ads"
+              type="number"
+              name=""
+              id="ads"
+            />
+            <input
+              onkeyup="getPrice()"
+              placeholder="Discount"
+              type="number"
+              name=""
+              id="discount"
+            />
+            <small id="total"></small>
           </div>
+          <input placeholder="Count" type="number" name="" id="count" />
+          <input placeholder="Category" type="text" name="" id="category" />
+          <button id="submit">Create</button>
         </div>
-        <br />
 
-        <button id="delete-all">Dalete All</button>
+        <div class="outputs">
+          <div class="searchBlock">
+            <input
+              onkeyup="searchData(value)"
+              type="text"
+              id="search"
+              placeholder="Search"
+            />
+            <div class="btnSearch">
+              <button onclick="searchPro(this.id)" id="searchTitle">
+                Search By Title
+              </button>
+              <button onclick="searchPro(this.id)" id="searchCategory">
+                Search By Category
+              </button>
+            </div>
+          </div>
+          <br />
+
+          <button id="delete-all">Dalete All</button>
+        </div>
         <table>
           <tr>
             <th>id</th>
