--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="inputs">
-          <input placeholder="title" type="text" name="" id="title" />
+          <input placeholder="title" type="text" name="" id="title" maxlength="10"/>
           <div class="price">
             <input
               onkeyup="getPrice()"
